--- a/app/blocks/indicator/indicator.scss
+++ b/app/blocks/indicator/indicator.scss
@@ -28,4 +28,14 @@
   &_blue {
     background-color: $color-meeting-room;
   }
+
+  &_sm-small {
+    @include screen('sm') {
+      font-size: 7px;
+      line-height: 9px;
+      width: 9px;
+      min-width: 9px;
+      height: 9px;
+    }
+  }
 }
