--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -140,6 +140,10 @@
       }
 
       @include screen('sm') {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+        padding-right: 0;
         margin-bottom: 26px;
       }
     }
