--- a/app/blocks/form-elements/form-checkradio.scss
+++ b/app/blocks/form-elements/form-checkradio.scss
@@ -528,8 +528,12 @@
 
   &__marker {
     position: absolute;
-    top: 0.42em;
-    right: 0;
+    top: .3em;
+    right: -21px;
+
+    @include screen('sm') {
+      right: -10px;
+    }
   }
 
   &__content {
@@ -707,6 +711,18 @@
         }
       }
     }
+
+    &#{$b}_sm-noundr {
+
+      #{$b}__content {
+
+        &::before {
+          @include screen('sm') {
+            display: none;
+          }
+        }
+      }
+    }
   }
 
   &_big {
@@ -778,10 +794,6 @@
   &_marker {
     position: relative;
     padding-right: 20px;
-
-    @include screen('sm') {
-      padding-right: 10px;
-    }
   }
 }
 
