--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -36,6 +36,7 @@ include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
 include ../blocks/filter-reset/filter-reset
+include ../blocks/filter-select/filter-select
 include ../blocks/footnote-star/footnote-star
 include ../blocks/footnote/footnote
 include ../blocks/form-box/form-box
