--- a/app/blocks/logo/logo.pug
+++ b/app/blocks/logo/logo.pug
@@ -30,6 +30,10 @@ mixin logo-image2(tag)
   +b(tag || 'a').logo&attributes(attributes)
     +e.IMG.icon(src="assets/images/logo2.svg")
 
+mixin logo-icon-short(tag)
+  +b(tag || 'a').logo&attributes(attributes)
+    +icon('logo-short').__icon
+
 mixin logo-image-short(tag)
   +b(tag || 'a').logo&attributes(attributes)
     +e.IMG.icon(src="assets/images/logo-short.svg")
