--- a/app/blocks/space-reservation/space-reservation.scss
+++ b/app/blocks/space-reservation/space-reservation.scss
@@ -120,9 +120,7 @@
   }
 
   &__price {
-    margin-top: 6px;
-
-    @include screen("md") {
+    @include screen('md') {
       margin-top: -4px;
     }
 
