--- a/app/components/space-offer/space-offer.scss
+++ b/app/components/space-offer/space-offer.scss
@@ -380,6 +380,9 @@
     .button {
       margin-left: auto;
       min-width: 140px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       flex: 1;
 
       @include screen('md') {
@@ -395,7 +398,8 @@
     box-sizing: border-box;
     padding: 8px 25px 7px 50px;
     min-height: 40px;
-    min-width: 660px;
+    min-width: 620px;
+    flex-wrap: wrap;
 
     @include screen('md') {
       width: 100%;
