--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -157,6 +157,7 @@ $color-border-state: #3d4552;
 $color-tooltip: #5bb2d6;
 $color-form-arrow: #a1abb8;
 $color-viewing: #cfb067;
+$color-user-link-active: #9ea7b3;
 
 // ##########
 // Transitions
