--- a/app/components/search-map/search-map.scss
+++ b/app/components/search-map/search-map.scss
@@ -44,12 +44,12 @@
   }
 
   .page.is-short & {
-    @include screen('md') {
-      top: 70px;
-      height: calc(100% - 70px);
-    }
+    // @include screen('md') {
+    //   top: 115px;
+    //   height: calc(100% - 115px);
+    // }
 
-    @include screen('sm') {
+    @include screen('md') {
       top: 0;
       height: 100%;
     }
