--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -16,6 +16,7 @@ block content
         +col({ md:12, xl: 9}).hide-md
           +breadcrumbs(['Home', 'Search Results', 'Blooming Founder (formre Blooms...', 'Reservation request'])
   +content-origin._reverse._wide-lg._last
+    - var offers = getData('offer-select.json')
     .container
       +e.wrapper
         +content-column-aside
@@ -26,7 +27,9 @@ block content
                   +space-reservation-info(space)
                 +col({sm: 12, md:6, xl: 12})
                   +space-reservation-price
-                    +info-price()._small 498.00 &pound; per month
+                    +offer-select().__select
+                      each item in offers
+                        +offer-select-item(item)
         +content-column-main._no-ptop
           +pivot-table
           +section._inner
