messages and event on header

--- a/app/blocks/header-user/header-user.pug
+++ b/app/blocks/header-user/header-user.pug
@@ -9,8 +9,8 @@ mixin header-user(host)
     - }
     +e.UL.list
       +e.LI.item
-        +user-link('calendar', '_calendar', true)(href="#")
+        +user-link('calendar', '_calendar', true).js-show-notices(href="#events-list")
       +e.LI.item
-        +user-link('message', '_message', true)(href="#")
+        +user-link('message', '_message', true).js-show-notices(href="#messages-list")
       +e.LI.item
         +user-link('heart', '_heart')(href="#")
