--- a/app/blocks/overlay/overlay.scss
+++ b/app/blocks/overlay/overlay.scss
@@ -12,7 +12,7 @@
   pointer-events: none;
   transition: opacity $ease-main;
 
-  .is-navigation-open & {
+  .is-navigation-open &, .is-overlay-show & {
     opacity: 1;
     pointer-events: auto;
   }
