--- a/app/components/user-menu-panel/user-menu-panel.pug
+++ b/app/components/user-menu-panel/user-menu-panel.pug
@@ -4,9 +4,9 @@ mixin user-menu-panel()
       +e.LI.item
         +logo-icon-short()(href="./")._small._gray.__logo
       +e.LI.item
-        +user-link('calendar', '_calendar', true).__link(href="#")
+        +user-link('calendar', '_calendar', true).__link.js-show-notices(href="#events-list")
       +e.LI.item
-        +user-link('message', '_message', true).__link(href="#")
+        +user-link('message', '_message', true).__link.js-show-notices(href="#messages-list")
       +e.LI.item
         +user-link('heart', '_heart').__link(href="#")
       +e.LI.item
