--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -53,6 +53,7 @@ include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/indicator/indicator
 include ../blocks/info-editable/info-editable
+include ../blocks/info-notices/info-notices
 include ../blocks/info-price/info-price
 include ../blocks/info-slide/info-slide
 include ../blocks/info-tooltip/info-tooltip
@@ -70,6 +71,7 @@ include ../blocks/message/message
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/note/note
+include ../blocks/notice/notice
 include ../blocks/notification/notification
 include ../blocks/offer-counters/offer-counters
 include ../blocks/offer-info/offer-info
