--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -22,4 +22,16 @@
     height: 110px;
     min-width: 110px;
   }
+
+  &_mid {
+    min-width: 43px;
+    width: 43px;
+    height: 43px;
+
+    @include screen('sm') {
+      width: 50px;
+      height: 50px;
+      min-width: 50px;
+    }
+  }
 }
