--- a/app/blocks/close/close.pug
+++ b/app/blocks/close/close.pug
@@ -1,3 +1,5 @@
 mixin close()
   +b.DIV.close&attributes(attributes)
-    +e.SPAN.base
+    +e.SVG.icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.36 15.36")
+      rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(18.55 7.68) rotate(135)")
+      rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(7.68 -3.18) rotate(45)")
