--- a/app/blocks/close/close.scss
+++ b/app/blocks/close/close.scss
@@ -1,58 +1,38 @@
 .close {
   $b: &;
 
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
+  position: absolute;
+  width: 38px;
+  height: 38px;
+  display: block;
+  -webkit-appearance: none;
+  background-color: transparent;
+  color: $color-black;
+  outline: none;
+  border: none;
+  fill: currentColor;
+  transition: color $ease-main;
+  padding: 10px;
+  box-sizing: border-box;
   cursor: pointer;
-  pointer-events: auto;
+  z-index: 100000;
 
-  &::before {
-    @include screen('sm') {
-      @include pseudo;
-
-      width: 70px;
-      height: 70px;
-      top: 50%;
-      left: 50%;
-      transform: translate3d(-50%, -50%, 0);
-    }
+  @include screen('md') {
+    width: 44px;
+    height: 44px;
   }
 
-  &__base {
-    position: relative;
-    display: block;
-    width: 32px;
-    height: 3px;
-    background-color: transparent;
+  @include screen('sm') {
+    width: 34px;
+    height: 34px;
+  }
 
-    &::before,
-    &::after {
-      @include pseudo;
+  &:hover {
+    color: $color-basic;
+  }
 
-      width: 45px;
-      height: 3px;
-      top: 0;
-      left: 50%;
-      transform: translate3d(-50%, 0, 0);
-      transform-origin: center center;
-      background-color: $color-black;
-      transition: background $ease-main;
-
-      #{$b}:hover & {
-        background-color: $color-basic;
-      }
-    }
-
-    &::before {
-      transform: translate3d(-50%, 0, 0) rotate(45deg);
-    }
-
-    &::after {
-      transform: translate3d(-50%, 0, 0) rotate(-45deg);
-    }
+  &-icon {
+    width: 100%;
+    height: 100%;
   }
 }
