--- a/app/blocks/logo/logo.scss
+++ b/app/blocks/logo/logo.scss
@@ -83,18 +83,26 @@
   }
 
   &_small {
-    width: 35px;
-    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
 
     @include screen('sm') {
-      width: 21px;
-      height: 24px;
+      width: 30px;
+      height: 30px;
     }
 
     #{$b} {
       &__icon {
-        width: 100%;
-        height: 100%;
+        width: 36px;
+        height: 40px;
+
+        @include screen('sm') {
+          width: 22px;
+          height: 24px;
+        }
       }
     }
   }
