--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 71px;
+  height: 70px;
   background-color: #fff;
   box-sizing: border-box;
   padding: 5px 0;
@@ -18,12 +18,13 @@
   z-index: 22;
 
   @include screen('md') {
+    padding: 5px 0;
     opacity: 1;
     pointer-events: auto;
   }
 
   @include screen('sm') {
-    padding: 5px 0;
+    padding: 5px 4px;
     height: 50px;
   }
 
