--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -8,6 +8,8 @@ html(lang='en')
     block header
     - var addClass = headerClass || ''
     - var pageCls = pageClass || ''
+    - var messages = getData('notices-message.json')
+    - var events = getData('notices-event.json')
     +gradients
     +header()(class=addClass)
 
@@ -20,6 +22,12 @@ html(lang='en')
 
     +overlay
     +user-menu-panel
+    +info-notices({indicator: 2, title: 'Events', link: {mdname: 'View all events', xlname: 'Show all events'}})#events-list
+      each item in events
+        +notice(item)
+    +info-notices({indicator: 2, title: 'Messages', link: {xlname: 'View all Messages', mdname: 'Read all messages', indicator: 2}})#messages-list
+      each item in messages
+        +notice(item)
     +cookies
     block panels
     +footer
