--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -158,6 +158,8 @@ $color-tooltip: #5bb2d6;
 $color-form-arrow: #a1abb8;
 $color-viewing: #cfb067;
 $color-user-link-active: #9ea7b3;
+$color-notice-bg: #ecf5f7;
+$color-notice-bg-hover: #d9e8eb;
 
 // ##########
 // Transitions
